# despesas_pessoais

./: .gitignore  mkdocs.yml  pyproject.toml
despesas_pessoais/: main.py
despesas_pessoais/input/: lanctos_receitas_despesas.csv
docs/: index.md
input/: lanctos_receitas_despesas.csv
tests/: test_main.py
