[tool.poetry]
name = "despesas-pessoais"
version = "0.1.0"
description = ""
authors = ["Mariangela Medeiros Crispim Araujo <mmcrispim@yahoo.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
